...
}: QuestionFaceContentProps) {
  const styles = createStyles(questionColor, instructionColor);

  return (
    <Pressable
      accessibilityHint="Double tap to reveal the answer"
      accessibilityLabel={"Flashcard question: " + toSpokenFlashcardText(cardQuestion)}
      accessibilityRole="button"
      delayLongPress={longPressDuration}
      onLongPress={onLongPress}
      onPress={onPress}
      onPressIn={onPressIn}
      onPressOut={onPressOut}
...
