...
    <Pressable
      accessibilityHint={
        hasLinkedLesson
          ? "Tap to read the connected lesson. Double tap to return to the question"
          : "Double tap to return to the question"
      }
      accessibilityLabel={"Flashcard answer: " + toSpokenFlashcardText(answer)}
      accessibilityRole="button"
      delayLongPress={longPressDuration}
      onLongPress={onLongPress}
      onPress={onPress}
      onPressIn={onPressIn}
      onPressOut={onPressOut}
...
