...
  );

  return (
    <SafeAreaView edges={["top", "right", "left"]} style={styles.screen}>
      <ScreenHeader>
        <Text accessibilityRole="header" style={styles.title}>
          Settings
        </Text>
      </ScreenHeader>
      <ScrollView
        contentContainerStyle={[
          styles.content,
          { paddingBottom: sizes.spacing.spacious + tabBarInset },
...
